yaml/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: canary
    nginx.ingress.kubernetes.io/canary-weight: "50"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: routetest-canary
  namespace: ai-itest
spec:
  ingressClassName: nginx
  rules:
  - host: route.test
    http:
      paths:
      - backend:
          service:
            name: routetestdev
            port:
              number: 8080
        path: /route/(.*)
        pathType: Prefix
