yaml/ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: routetest
  namespace: ai-itest
spec:
  ingressClassName: nginx
  rules:
  - host: route.test
    http:
      paths:
      - backend:
          service:
            name: routetest
            port:
              number: 8080
        path: /route/(.*)
        pathType: Prefix
